add IpAttributeTest